--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-
-"type": "module",
   "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "express.js",
   "scripts": {
-    "start": "node express.js",
+    "start": "ts-node express.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@metaplex/js": "^4.12.0",
+    "@project-serum/anchor": "0.24.2",
     "@solana/web3.js": "^1.66.2",
+    "@switchboard-xyz/common": "^2.1.3",
+    "@switchboard-xyz/switchboard-v2": "^0.0.151",
     "axios": "^1.1.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "node-fetch": "^3.2.10"
+    "node-fetch": "2",
+    "ts-node": "latest"
   }
 }
