--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@metaplex/js": "^4.12.0",
     "@project-serum/anchor": "0.24.2",
+    "@project-serum/common": "^0.0.1-beta.3",
     "@solana/web3.js": "^1.66.2",
     "@switchboard-xyz/common": "^2.1.3",
     "@switchboard-xyz/switchboard-v2": "^0.0.151",
