--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - CLUSTER=devnet
       - HEARTBEAT_INTERVAL=30 # Seconds
       - ORACLE_KEY=Gdy6Tw2z2q92HR1DDjtX9SmPemzcwdGQwrYcTCg1rRdy
-      - RPC_URL=https://solana-devnet.g.alchemy.com/v2/4Q5FSmnGz3snzIr01s-ZNwAtdFdnDB9L
+      - RPC_URL=https://solana-mainnet.g.alchemy.com/v2/WM_Gl7ktiws7icLQVxLP5iVHNQTv8RNk
     volumes:
       - ./configs.json:/configs.json
 secrets:
