--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fetch-blob": "^3.2.0",
     "node-fetch": "2",
+    "openai": "^3.1.0",
+    "stream": "^0.0.2",
     "ts-node": "latest",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "util": "^0.12.5"
   }
 }
