--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fetch-blob": "^3.2.0",
     "node-fetch": "2",
     "openai": "^3.1.0",
+    "sharp": "^0.31.2",
     "stream": "^0.0.2",
     "ts-node": "latest",
     "typescript": "^4.8.4",
