--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bundlr-network/client": "^0.9.0",
     "@metaplex/js": "^4.12.0",
     "@project-serum/anchor": "^0.25.0",
     "@project-serum/common": "^0.0.1-beta.3",
